# os

./: .gdbinit  Cargo.toml  Makefile  README.md  cat  ct-ng.config
lib/kernel_alloc/: Cargo.toml
lib/kernel_alloc/src/: lib.rs
src/: lib.rs
src/arch/: mod.rs
src/arch/arm/: cpu.rs  mem.rs  mod.rs  pic.rs  pl011.rs  thread.rs  vector.rs
src/arch/arm/board/: mod.rs
src/arch/arm/board/integrator/: intr.rs  linker.ld  mod.rs  pic.rs  stub.rs  timer.rs
src/arch/arm/board/rpi/: glue.c  gpio.rs  intr.rs  linker.ld  mod.rs  serial.rs  stub.S  stub.rs  timer.rs
src/arch/arm/board/rpi/gpio/: gpio.rs  mod.rs
src/arch/arm/board/rpi/spi/: mod.rs  spi.rs
src/arch/arm/board/rpi2/: intr.rs  linker.ld  mailbox.rs  mod.rs  serial.rs  stub.S  stub.rs  timer.rs
src/arch/arm/cpu/: armv6.rs  armv7.rs  mod.rs
src/arch/arm/integrator/: glue.c  linker.ld  mod.rs  pic.rs  serial.rs  stub.S  stub.rs  timer.rs
src/cpu/: mod.rs
src/device/: mod.rs  serial.rs  spi.rs
src/drivers/: mod.rs
src/io/: mod.rs
src/mem/: mod.rs
src/platform/: arm.rs  intr.rs  mod.rs
src/sched/: mod.rs  sema.rs
src/sync/: cpumutex.rs  mod.rs  sema.rs
src/thread/: mod.rs
tools/: gdb-ocd  run-tftp.sh
tools/arm-cross-tools/: Dockerfile
tools/ocd/: Dockerfile  Makefile
tools/ocd/board/: gdb.tcl  raspberrypi-raspberrypi.tcl  sourcepi2  sourcepi3
tools/qemu/: Dockerfile
