[package]
name = "os"
version = "0.1.0"
authors = ["Kohavi, Yuval <yuval.kohavi@gmail.com>"]


[dependencies]
rlibc = "1.0.0"
bitflags = "0.7.0"
spin = "0.4.4"

[dependencies.kernel_alloc]
path = "lib/kernel_alloc"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[lib]
crate-type = ["staticlib"]

[features]
multicpu = []
arm = []
armv6 = ["arm"]
armv7 = ["arm"]
board-integrator = ["armv6"]
board-rpi2 = ["armv7", "multicpu"]
board-rpi = ["armv6"]